--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,5 +32,5 @@ format:
     css: styles.css
     toc: true
 
-site-url: https://gu-dsan6725.github.io/spring-2025-final-project-project-group-3/
+site-url: https://yuerwangg.github.io/dsan6725_project_group_3/
 
